# bayes_opt

./: README.md  main.py  pyproject.toml
results/: experiment_20260418_171422.txt  experiment_20260418_171911.txt  experiment_20260418_172332.txt  summary_table.txt
src/: __init__.py
src/bayesian_optimization/: __init__.py  barrier.py  base.py  cei.py  lagrange.py  penalty.py
src/experimental_design/: __init__.py  lhs.py
src/test_problems/: __init__.py  constrained_problems.py
src/utils/: __init__.py  experiment.py  types.py  visualization.py
