[project]
name = "bayesian-optimization"
version = "0.1.0"
description = "Bayesian Optimization with constrained benchmarks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]
bbob = [
    "coco-experiment>=2.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
